systemd System and Service Manager

   systemd (214.4-dev)
~~~~~~~
 * tmpfiles:
    - skip mknod() on -EPERM (device cgroup);
    - remove conditions from systemd-tmpfiles-setup(units);
 * bugfixes:
    - fix sd_eviocrevoke ioctl call(logind);

   systemd (214.3)
~~~~~~~
 * journal:
    - move journal man pages to separate module journal;
    - move journal.pc to separate module journal;
    - move journal completions to separate module journal;
    - move journalctl to separate module journal;
    - move journald service to separate module journal;
    - move journald to separate module journal;
    - move journal tests to separate module journal;
    - move libjournal-core to separate module journal;
    - move libjournal-internal to separate module journal;
    - move journald.conf to separate module journal;
    - move libjournal to separate module journal;
    - move journal tmpfiles to separate module journal;
    - remove journald fields from kernel-command-line man page;
 * sd-messages.h:
    - remove unused id SD_MESSAGE_MACHINE_START;
    - remove unused id SD_MESSAGE_MACHINE_STOP;
    - remove unused id SD_MESSAGE_TIMEZONE_CHANGE;
    - move id's SD_MESSAGE_JOURNAL_* to separate module journal;
    - move id SD_MESSAGE_COREDUMP to separate module journal;
    - move id SD_MESSAGE_FORWARD_SYSLOG_MISSED to separate module journal;
    - remove id SD_MESSAGE_SHUTDOWN;
    - remove id SD_MESSAGE_TIME_CHANGE;
    - remove id SD_MESSAGE_SEAT_START;
    - remove id SD_MESSAGE_SEAT_STOP;
    - remove id SD_MESSAGE_SESSION_START;
    - remove id SD_MESSAGE_SESSION_STOP;
    - remove id SD_MESSAGE_SLEEP_START;
    - remove id SD_MESSAGE_SLEEP_STOP;
    - remove id SD_MESSAGE_CONFIG_ERROR;
    - remove id's SD_MESSAGE_UNIT_*;
    - remove id SD_MESSAGE_STARTUP_FINISHED;
    - remove id SD_MESSAGE_SPAWN_FAILED;
    - remove id SD_MESSAGE_OVERMOUNTING;
    - remove id's SD_MESSAGE_LID_*;
    - remove id SD_MESSAGE_SYSTEM_DOCKED;