@@ -1,40 +1,0 @@
-#  This file is part of systemd.
-#
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU Lesser General Public License as published by
-#  the Free Software Foundation; either version 2.1 of the License, or
-#  (at your option) any later version.
-
-[Unit]
-Description=Syslog Socket
-Documentation=man:systemd.special(7)
-Documentation=http://www.freedesktop.org/wiki/Software/systemd/syslog
-DefaultDependencies=no
-Before=sockets.target shutdown.target
-
-# Don't allow logging until the very end
-Conflicts=shutdown.target
-
-[Socket]
-ListenDatagram=/run/systemd/journal/syslog
-SocketMode=0666
-PassCredentials=yes
-PassSecurity=yes
-ReceiveBuffer=8M
-
-# The default syslog implementation should make syslog.service a
-# symlink to itself, so that this socket activates the right actual
-# syslog service.
-#
-# Examples:
-#
-# /etc/systemd/system/syslog.service -> /lib/systemd/system/rsyslog.service
-# /etc/systemd/system/syslog.service -> /lib/systemd/system/syslog-ng.service
-#
-# Best way to achieve that is by adding this to your unit file
-# (i.e. to rsyslog.service or syslog-ng.service):
-#
-# [Install]
-# Alias=syslog.service
-#
-# See http://www.freedesktop.org/wiki/Software/systemd/syslog for details.
