@@ -2,6 +2,8 @@ systemd System and Service Manager
 
    systemd (214.4-dev)
 ~~~~~~~
+ * journal:
+    - syslog socket unit to separate module journal;
  * tmpfiles:
     - skip mknod() on -EPERM (device cgroup);
     - remove conditions from systemd-tmpfiles-setup(units);
